# abbu

./: LICENSE  README.md  pyproject.toml
src/abbu/: __init__.py  cache_utils.py  consts.py  file2file.py  generator.py  gpt_func.py  spec.py
tests/: Number_Adder.py  Number_Guesser.py  Password_Generator.py  Turtle_function.py  goodbye.py  hello.py
